--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -10,22 +10,25 @@
     List<Tuple<int, string>> decanen = DecaanRepo.GetDecanen(); // Geeft het ID en username van alle decanen mee
 }
 
-<br>
-
-<a class="btn btn-default" href="~/Admin/Decaan/DecaanToevoegen">
-    <span class="glyphicon glyphicon-pencil"></span> Nieuwe decaan aanmaken
-</a>
-
 <table class="table">
-    @foreach (Tuple<int, string> decaan in decanen)
-    {
+    <thead>
         <tr>
-            <td>
-                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1" class="btn btn-default">
-                    <span class="glyphicon glyphicon-pencil"></span> Edit
-                </a>
-            </td>
+            <th colspan="2">Decaan overzicht</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (Tuple<int, string> decaan in decanen)
+        {
+        <tr>  
             <td>@decaan.Item2</td>
+            <td>
+                <a href="~/Admin/Decaan/DecaanWijzigen?id=@decaan.Item1">Aanpassen</a>
+            </td>
         </tr>
     }
+    </tbody>
 </table>
+
+<a class="btn btn-default" id="floatRight" href="~/Admin/Decaan/DecaanToevoegen">
+    <span class="glyphicon glyphicon-pencil"></span> Nieuwe decaan aanmaken
+</a>
