--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -3,7 +3,9 @@
    int id = WebSecurity.CurrentUserId;
    List<LeerlingRepo.Leerling> leerlingen = LeerlingRepo.GetLeerlingen(); 
 }
-
+<a class="btn btn-default" href="~/Admin/Leerling/LeerlingToevoegen">
+    <span class="glyphicon glyphicon-pencil"></span> Nieuwe leerling aanmaken
+</a>
 </br>
 Leerlingenoverzicht
 </br>
@@ -35,9 +37,7 @@ Leerlingenoverzicht
                 }
             </td>
             <td>
-                <a href="~/Decaan/LeerlingDetails?Id=@leerling.UserId" class="btn btn-default" role="button">
-                    <span class="glyphicon glyphicon-user"></span> Meer
-                </a>
+                <a href="~/Decaan/LeerlingDetails?Id=@leerling.UserId">Meer</a>
             </td>
         </tr>
     }
