--- a/ComeniusCarrousel/Leerling/_LeerlingDetails.cshtml
+++ b/ComeniusCarrousel/Leerling/_LeerlingDetails.cshtml
@@ -14,12 +14,16 @@
     // zoniet is het null.
     LeerlingRepo.Leerling leerling = (!Request.QueryString["Id"].IsEmpty() && Request.QueryString["Id"].IsInt() && (User.IsInRole("Admin") || User.IsInRole("Decaan"))) || User.IsInRole("Leerling") == true ? LeerlingRepo.GetLeerling(id) : null;
 }
+
+@if (User.IsInRole("Leerling"))
+{
 <h4 style="color: #585858">&nbsp; Welkom terug, <i>@leerling.Voornaam @leerling.Achternaam</i> (<i>@leerling.Leerlingnummer</i>)!</h4>
+}
 
 <table class="table">
     <thead>
     <tr>
-        <th colspan="2">Test</th>
+        <th colspan="2">Leerlinggegevens</th>
     </tr>
     </thead>
     <tbody>
