--- a/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanWijzigen.cshtml
@@ -47,8 +47,8 @@
         <span>@user</span>
     </p>
     <form method="post" class="form-inline">
-        <button type="submit" id="submit" name="delete" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span> Remove
+        <button type="submit" id="submit" name="delete" class="btn btn-danger" style="float: right;">
+            <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder
         </button>
     </form>
 }
