WIP Bulk leerling

--- a/ComeniusCarrousel/Admin/Leerling/BulkLeerlingenToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/BulkLeerlingenToevoegen.cshtml
@@ -49,6 +49,9 @@
                 string mail = leerling[3];
                 string wachtwoord = leerling[4];
                 string klas = leerling[5];
+                string niveau = leerling[6];
+                string vak = leerling[7];
+                string instroomleerling = leerling[8];
 
                 //WIP
             }
