--- a/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
@@ -73,6 +73,7 @@
                 ModelState.AddFormError("Gebruiker bestaat al");
             }
             db.Close();
+            db2.Close();
         }
     }
 }
