--- a/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
@@ -95,7 +95,7 @@
                     var dataId = db.QuerySingle("SELECT UserId FROM UserProfile WHERE LOWER(UserName) = LOWER(@0)", userName);
                     db2.Execute("INSERT INTO Gebruiker (Voornaam, Achternaam, UserId) VALUES (@0,@1,@2)",voornaam, achternaam, dataId.UserId);
                     db2.Execute("INSERT INTO Leerling (UserId, KlasId, Niveau, Leerlingnummer, InstroomLeerling, TalentstroomVak, Aangemeld ) VALUES (@0,@1,@2,@3,@4,@5,@6)",dataId.UserId, klasId, niveau, nummer, "False", talentstroomvak, "False");
-                    Roles.AddUserToRole(userName, "Leraar");
+                    Roles.AddUserToRole(userName, "Leerling");
                     db.Close();
                     db2.Close();
                     Response.Redirect("~/");
@@ -112,6 +112,7 @@
                 ModelState.AddFormError("Gebruiker bestaat al");
             }
             db.Close();
+            db2.Close();
         }
     }
 }
